@@ -65,6 +65,13 @@ ifeq ($(findstring x4.0.,x$(GCC_VERSION)),x4.0.)
 GCC_NO_MPFR:=y
 endif
 
+# Branding works on >= 4.3
+ifneq ($(findstring x4.2.,x$(GCC_VERSION)),x4.2)
+BUILDROOT_VERSION_STRING=$(call qstrip,$(BR2_VERSION))
+EXTRA_GCC_CONFIG_OPTIONS+=--with-pkgversion="Buildroot $(BUILDROOT_VERSION_STRING)" \
+	--with-bugurl="http://bugs.buildroot.net/"
+endif
+
 GCC_TARGET_PREREQ=
 GCC_STAGING_PREREQ=
 
