@@ -8,6 +8,7 @@
 	#753: Bump lighttpd package to 1.4.25
 	#761: Add binutils 2.20 to toolchain options
 	#763: [SECURITY] Update pcre to 7.9
+	#765: Add buildroot branding to gcc
 
 2009.11, Released December 1st, 2009:
 
